Added some extra functionality to before each method and cleaned up more of pom classes/tests also added testmethodorder to both tests